# dnd-roller3

./: LICENSE  README.md  pyproject.toml  pytest.ini  setup.cfg  setup.py
dnd_roller/: __init__.py  dice.py
tests/: test_dice_roll.py  test_roll.py  test_sequence_rolls.py
